--- a/app/views/weather_forecasts/show.html.erb
+++ b/app/views/weather_forecasts/show.html.erb
@@ -32,3 +32,21 @@
     </div>
   </div>
 </div>
+
+<%= Clothing.where({ :weather_forecast_id => @weather_forecast_id }) %>
+
+<div class="row">
+
+<% @weather_forecast.clothings.each do |list| %>
+<div class="panel panel-default">
+  <div class="panel-heading">
+    <h3 class="panel-title"></h3>
+    <%= clothing.name %>
+  </div>
+  <div class="panel-body">
+  </div>
+  <div class="panel-footer">
+  </div>
+</div>
+</div>
+<% end %>
