--- a/app/views/weather_forecasts/index.html.erb
+++ b/app/views/weather_forecasts/index.html.erb
@@ -1,7 +1,8 @@
 <div class="page-header">
   <h1>
     Weather forecasts
-    <a href="/weather_forecasts/new" class="btn btn-lg btn-success">New Weather forecast</a>
+    <a href="/weather_forecasts/new" class="btn btn-lg btn-success">New Weather forecast (manual)</a>
+    <a href="/street_to_weather/new" class="btn btn-lg btn-success">Generate weather forecast (automatic)</a>
   </h1>
 </div>
 
